--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:baselineAligned="false"
+    android:background="@drawable/group">
 
     <Button
-        android:text="Signup"
+        android:text="Sign up"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/signup" />
 
     <Button
-        android:text="Login"
+        android:text="Log in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/login" />
+        android:id="@+id/login"
+        android:textAllCaps="false" />
+
 </LinearLayout>
