--- a/Group Study APP/app/src/main/res/layout/fragment_item.xml
+++ b/Group Study APP/app/src/main/res/layout/fragment_item.xml
@@ -48,9 +48,10 @@
 
         <TextView
             android:id="@+id/description"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="last message in the group"
             android:textSize="15dp" />
     </LinearLayout>
 
