--- a/Group Study APP/app/src/main/res/layout/fragment_new_chat.xml
+++ b/Group Study APP/app/src/main/res/layout/fragment_new_chat.xml
@@ -38,9 +38,9 @@
 
                     <EditText
                         android:id="@+id/input_group_name"
-                        android:inputType="textCapWords"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:inputType="textCapWords" />
 
                 </LinearLayout>
 
@@ -74,9 +74,9 @@
 
                     <ImageView
                         android:id="@+id/img_preview"
-                        android:scaleType="centerCrop"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop" />
                 </RelativeLayout>
 
             </LinearLayout>
@@ -132,6 +132,14 @@
                 android:indeterminateTint="@color/colorAccent"
                 android:indeterminateTintMode="src_atop" />
 
+            <TextView
+                android:id="@+id/txt_no_participants"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="80dp"
+                android:text="@string/no_users_to_add" />
+
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view"
@@ -139,7 +147,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
                 android:clipToPadding="false"
-                android:paddingBottom="48dp"
+                android:paddingBottom="8dp"
                 android:scrollbars="vertical" />
 
         </LinearLayout>
