--- a/Group Study APP/app/src/main/res/values/dimens.xml
+++ b/Group Study APP/app/src/main/res/values/dimens.xml
@@ -14,4 +14,13 @@
     <dimen name="icon_width_height">40dp</dimen>
     <dimen name="icon_group_height">50dp</dimen>
     <dimen name="timestamp">12dp</dimen>
+    <dimen name="chat_msg_margin_bottom">20dp</dimen>
+    <dimen name="ic_chat_user">40dp</dimen>
+    <dimen name="msg_chat_text">16dp</dimen>
+    <dimen name="padding_10">10dp</dimen>
+    <dimen name="chat_bubble_radius">4dp</dimen>
+    <dimen name="chat_send_message_container_radius">8dp</dimen>
+    <dimen name="chat_bubble_left_margin">20dp</dimen>
+    <dimen name="padding_5">5dp</dimen>
+    <dimen name="chat_btn_send_radius">50dp</dimen>
 </resources>
